corregir problemas de contracts